# redis-mcp

./: Cargo.toml  LICENSE  config.toml  readme.md
src/: config.rs  handler.rs  main.rs  redis_cli.rs
