[package]
name = "redis-mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
redis = { version = "0.24", features = ["cluster-async", "tokio-comp"] }
mcp-sdk-rs = "0.1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
async-trait = "0.1" # 必须，用于实现异步 Handler
